# mp-neural-network

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  QUALITY_GUIDE.md  README.md  build_and_upload.sh  corrections.md  data.txt  ffnn.py  func.ipynb  index.html  main.py  mkdocs.yml  mnist.ipynb  objects.inv  pyproject.toml  requirements.txt  run_full_tests.sh  sitemap.xml
.github/workflows/: ci_cd.yml  docs.yml  pytest.yml  quality.yml  release.yml
INTERNALS/: index.html
OPTIMIZATION_GUIDE/: index.html
QUALITY_GUIDE/: index.html
ROADMAP/: index.html
USER_GUIDE/: index.html
benchmark/: layer1d_classification.py  layer2d_classification.py  regression.py  run_benchmarks.py
docs/: INTERNALS.md  OPTIMIZATION_GUIDE.md  QUALITY_GUIDE.md  ROADMAP.md  USER_GUIDE.md
docs/reference/: activations.md  backend.md  layers.md  losses.md  metrics.md  model.md  optimizers.md  serialization.md
example/: california.py  conv_mnist.py  create_model.py  create_model_convolutional.py  dataset.py  download_mnist.py  evaluate.py  gpu.py  mnist.py  regression.py  super_cnn.py
old/: ffnn.py  ffnn_2.py  ffnn_func.py  ffnn_old.py  math_problem.ipynb  neural_network.ipynb  test.ipynb  test2.ipynb  test3.ipynb  utils.py
reference/activations/: index.html
reference/backend/: index.html
reference/layers/: index.html
reference/losses/: index.html
reference/metrics/: index.html
reference/model/: index.html
reference/optimizers/: index.html
reference/serialization/: index.html
search/: search_index.json
src/: activations.py  layers.py  model.py
src/gui/: imagehandler.py  neuralnethandler.py  paint.py
src/mpneuralnetwork/: __init__.py  activations.py  backend.py  layers.py  losses.py  metrics.py  model.py  optimizers.py  serialization.py
src/mpneuralnetwork/layers/: layer.py  layer1d.py  layer2d.py  utils.py
tests/: conftest.py  test_activations.py  test_layers.py  test_losses.py  test_metrics.py  test_model.py  test_optimizers.py  test_training_features.py  utils.py
tests/layers/: test_batchnorm.py  test_dense.py  test_dropout.py
tests/model/: test_callbacks.py  test_io.py
