[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "mpneuralnetwork"
version = "2025.1.0a8"
dependencies = [
  "numpy>=1.21",
  "scipy>=1.10",
]
authors = [
  { name="Maxime Pires", email="maximepires4@gmail.com" },
]
description = "A small python library for neural networks"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/maximepires4/mp-neural-network"
Issues = "https://github.com/maximepires4/mp-neural-network/issues"

[project.optional-dependencies]
test = [
  "pytest",
]
build = [
  "build",
  "twine",
]
examples = [
  "dill",
  "pillow",
]
