[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "mpneuralnetwork"
version = "1.0.0"
dependencies = [
  "numpy>=1.21"
]
authors = [
  { name="Maxime Pires", email="maximepires4@gmail.com" },
]
description = "A fully vectorized Deep Learning framework built from scratch using only NumPy."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/maximepires4/mp-neural-network"
Issues = "https://github.com/maximepires4/mp-neural-network/issues"

[project.optional-dependencies]
build = [
  "build",
  "twine",
]

example = [
  "pandas"
]

test = [
    "pytest>=7.0",
]

dev = [
    "pytest-cov>=4.0",
    "ruff==0.14.5",
    "mypy==1.18.2",
    "pre-commit>=3.0.0",
    "types-setuptools"
]

profile = [
  "snakeviz",
  "memray"
]

[tool.ruff]
line-length = 150
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["mpneuralnetwork"]

[tool.mypy]
python_version = "3.12"
files = ["src/mpneuralnetwork", "example", "benchmark"]
exclude = ["tests"]
warn_return_any = true
warn_unused_configs = true
explicit_package_bases = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true  # Utile pour scipy/numpy si stubs manquants

[tool.coverage.run]
source = ["mpneuralnetwork"]
omit = ["tests/*", "examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError"
]
